src/test/ui/issues/issue-2XXXX/issue-29184.rs
fn main() {
    let x: typeof(92) = 92; //~ ERROR `typeof` is a reserved keyword
}
